# OPAP

./: .gitattributes  .gitignore  ASSETS.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  OSCAR_PROVENANCE.md  PORTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt
.github/: deny.toml  dependabot.yml
.github/scripts/: THIRD_PARTY_NOTICES.md  check-js-licenses.mjs  generate-third-party-licenses.mjs  prepare-third-party-node-dependencies.mjs  test-tauri-legal-resources.mjs  third-party-targets.json  verify-license-supplement-sources.mjs
.github/scripts/license-supplements/: manifest.json
.github/scripts/tests/: generate-third-party-licenses.test.mjs
.github/scripts/tests/fixtures/bare-expression/: LICENSE  package.json
.github/scripts/tests/fixtures/missing-text/: package.json
.github/scripts/tests/fixtures/multi-license/: LICENSE-APACHE  LICENSE-MIT  package.json
.github/scripts/tests/fixtures/pointer-only/: COPYING  package.json
.github/workflows/: ci.yml  security.yml
apps/desktop/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  buildInfo.ts  main.tsx  styles.css  theme.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: about.toml  app_bootstrap.toml  import_cancel.toml  import_jobs.toml  import_prepare.toml  profile_create.toml  profile_list.toml  source_select.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/client/: OpapClientProvider.tsx  contracts.ts  decode.ts  demoClient.test.ts  demoClient.ts  errors.test.ts  errors.ts  index.ts  opapContext.ts  runtime.test.ts  runtime.ts  sourceId.ts  tauriClient.test.ts  tauriClient.ts
apps/desktop/src/components/: AppFrame.tsx  Brand.tsx  ContentState.tsx  DataVisuals.tsx  LegalNotices.test.tsx  LegalNotices.tsx  MetricCard.tsx
apps/desktop/src/data/: mockData.ts
apps/desktop/src/pages/: DailyPage.tsx  ImportPage.test.tsx  ImportPage.tsx  OverviewPage.tsx  SettingsPage.tsx
apps/desktop/src/test/: setup.ts
compat/: Cargo.toml  FORMAT.md  PRIVATE_ORACLE.md  README.md  oscar-code-revision.txt  oscar-sql-revision.txt
compat/schema/: opap-compat-manifest.schema.json
compat/scripts/: verify-compat-trees.sh
compat/src/: lib.rs  main.rs
compat/tests/: cli.rs  schema.rs
compat/tests/fixtures/: aggregate-digest-vector.json  source-digest-vector.json  synthetic-opap.json  synthetic-oscar.json  waveform-digest-vector.json
crates/opap-analytics/: Cargo.toml  OSCAR_PROVENANCE.md  README.md
crates/opap-analytics/src/: day.rs  error.rs  events.rs  lib.rs  signal.rs  usage.rs
crates/opap-analytics/tests/: oscar_compat.rs  source_derived_examples.rs
crates/opap-channels/: Cargo.toml  NOTICE.md  OSCAR_PROVENANCE.md  README.md
crates/opap-channels/src/: lib.rs  model.rs  registry.rs
crates/opap-channels/tests/: oscar_pinned_compat.rs  oscar_pinned_metadata.rs  registry_invariants.rs
crates/opap-core/: Cargo.toml
crates/opap-core/src/: domain.rs  importer.rs  lib.rs  main.rs  resmed.rs
crates/opap-core/src/resmed/: csl.rs  eve.rs  pld.rs  session_import.rs  session_index.rs  str.rs  str_settings.rs  str_summary.rs
crates/opap-core/tests/: resmed_conformance.rs  resmed_manual_expectations.rs
crates/opap-edf/: Cargo.toml  README.md
crates/opap-edf/src/: error.rs  lib.rs  model.rs  parser.rs
crates/opap-edf/tests/: parser.rs
crates/opap-service/: Cargo.toml  README.md
crates/opap-service/src/: api.rs  error.rs  lib.rs  service.rs
crates/opap-service/tests/: service_workflow.rs
crates/opap-storage/: Cargo.toml  README.md
crates/opap-storage/migrations/: 0001_initial_storage.sql  0002_query_indexes.sql  0003_storage_integrity.sql  0004_import_job_states.sql  0005_opaque_import_sources.sql  0006_import_history_link_integrity.sql  0007_opaque_import_keys.sql  0008_session_snapshots.sql  0009_atomic_import_commits.sql  0010_import_snapshot_integrity.sql
crates/opap-storage/src/: error.rs  import_commit.rs  lib.rs  migrations.rs  model.rs  replacement.rs
crates/opap-storage/src/repository/: events.rs  imports.rs  machines.rs  mod.rs  profiles.rs  sessions.rs  snapshots.rs  waveforms.rs
crates/opap-storage/tests/: import_commits.rs  session_snapshots.rs  storage_integration.rs
docs/: README.md  architecture.md  roadmap.md
docs/adr/: 0001-local-first-health-data.md
docs/legal/: gpl-and-attribution.md
docs/product/: safety-and-privacy.md
docs/security/: fixture-anonymization.md  threat-model.md
tests/acceptance/: Cargo.toml  README.md
tests/acceptance/features/: resmed_brp_import.feature  resmed_identification.feature  service_workflow.feature
tests/acceptance/tests/: resmed_acceptance.rs  resmed_brp_import.rs  service_acceptance.rs
