[package]
name = "opap-oscar-compat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "Test-only differential compatibility harness for the OPAP OSCAR port"
publish = false

# Keep the test harness independent from OPAP's production workspace.
[workspace]

[dependencies]
opap-channels = { path = "../crates/opap-channels" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"

[dev-dependencies]
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
tempfile = "3.20"

[[bin]]
name = "oscar-diff"
path = "src/main.rs"
